--- a/test/index.html
+++ b/test/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,11 +12,14 @@
 	<link rel="stylesheet" type="text/css" href="css/search-form.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
+
 <body style="overflow-y: hidden">
 	<div class="z-5 oh">
 		<div id="tc" class="tc">
-			<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
-			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+			<button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
+				aria-controls="offcanvasRight">Toggle right offcanvas</button>
+			<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+				aria-labelledby="offcanvasRightLabel">
 				<div class="offcanvas-header">
 					<h5 class="offcanvas-title" id="offcanvasRightLabel">导航管理</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -30,12 +34,14 @@
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto">
 		<div class="d-flex flex-column justify-content-end" style="height: 40%;">
-			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1"></div>
+			<div class="mx-auto shadow mt-3 rounded-3"><img id="indexing" width="250" src="img/login.png" class="p-1">
+			</div>
 			<div class="mx-auto mt-5 pt-5">
 				<form onsubmit="submitFn(this, event);">
 					<div class="search-wrapper">
 						<div class="input-holder">
-							<input type="text" id="txt" class="search-input" placeholder="Type to search" onkeyup="searchToggle(this, event);" />
+							<input type="text" id="txt" class="search-input" placeholder="Type to search"
+								onkeyup="searchToggle(this, event);" />
 							<button class="search-icon" onclick="searchToggle(this, event);"><span></span></button>
 						</div>
 						<span class="close" onclick="searchToggle(this, event);"></span>
@@ -63,8 +69,8 @@
 				</div>
 				<div class="float-end">
 					<span class="badge text-black-50">
-						<a href="test/index.html" rel="nofollow" target="_blank">Ts</a> • 
-						<a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • 
+						<a href="test/index.html" rel="nofollow" target="_blank">Ts</a> •
+						<a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> •
 						<a id="uptime1" href="index/Develop.html">Beta:error</a>
 					</span>
 					<span id="state1" class="badge text-bg-success">Error</span>
@@ -74,7 +80,7 @@
 		</div>
 	</div>
 	<script>
-		document.addEventListener('DOMContentLoaded', function() {
+		document.addEventListener('DOMContentLoaded', function () {
 			// 修改这里：从js文件夹加载nav-data.json
 			fetch('js/nav-data.json')
 				.then(response => response.json())
@@ -86,13 +92,13 @@
 					document.getElementById('nav-tabs-container').innerHTML = '<div class="alert alert-info">暂无导航数据，请先上传JSON文件</div>';
 				});
 		});
-		
+
 		function renderNavigation(navData) {
 			const navTabsContainer = document.getElementById('nav-tabs-container');
 			const navContentContainer = document.getElementById('nav-content-container');
 			navTabsContainer.innerHTML = '';
 			navContentContainer.innerHTML = '';
-			
+
 			// 渲染主要标签页
 			navData.tabs.forEach((tab, index) => {
 				const tabElement = document.createElement('a');
@@ -100,12 +106,12 @@
 				tabElement.textContent = tab.name;
 				tabElement.setAttribute('data-tab', tab.name.toLowerCase().replace(/\s+/g, '-'));
 				tabElement.href = '#';
-				tabElement.addEventListener('click', function(e) {
+				tabElement.addEventListener('click', function (e) {
 					e.preventDefault();
 					switchTab(tab.name.toLowerCase().replace(/\s+/g, '-'));
 				});
 				navTabsContainer.appendChild(tabElement);
-				
+
 				const contentElement = document.createElement('div');
 				contentElement.className = `nav-ban ${index === 0 ? '' : 'd-none'}`;
 				contentElement.id = `tab-${tab.name.toLowerCase().replace(/\s+/g, '-')}`;
@@ -119,14 +125,13 @@
 					col.className = 'col my-2 p-1 text-center text-black-50 kuaijie-a';
 					col.innerHTML = `
 						<img class="border rounded-circle w" src="${item.icon}" loading="lazy" onerror="this.src='img/index.png'">
-						<h6 class="t1">${item.name}</h6>
-					`;
+						<h6 class="t1">${item.name}</h6>`;
 					row.appendChild(col);
 				});
 				contentElement.appendChild(row);
 				navContentContainer.appendChild(contentElement);
 			});
-			
+
 			// 在最后添加More链接
 			const moreTabElement = document.createElement('a');
 			moreTabElement.className = 'nav-link btn nav-top';
@@ -134,7 +139,7 @@
 			moreTabElement.textContent = '...';
 			navTabsContainer.appendChild(moreTabElement);
 		}
-		
+
 		function switchTab(tabName) {
 			document.querySelectorAll('.nav-ban').forEach(tab => {
 				tab.classList.add('d-none');
@@ -155,7 +160,84 @@
 	</div>
 	<script src="js/particles.min.js"></script>
 	<script src="js/foot.js"></script>
-	<script src="js/foot_index.js"></script>
+	<script>
+		//首页栏目切换算法
+		var aTop = document.getElementsByClassName('nav-top');
+		var aBan = document.getElementsByClassName('nav-ban');
+		var i = 0;
+		for (i = 0; i < aTop.length - 1; i++) {
+			aTop[i].index = i;
+			aTop[i].onmouseenter = function () {
+				for (i = 0; i < aBan.length; i++) {
+					aTop[i].className = 'nav-link btn nav-top';
+					aBan[i].style.display = 'none';
+				};
+				aBan[this.index].style.display = 'block';
+				this.className = 'nav-link btn nav-top active';
+			};
+		};
+
+		//--------------------------------------------------------------
+
+		//首页搜索框跳转指向算法
+		var indexing = document.getElementById("indexing");
+		var oMoreB = localStorage.getItem("oMoreB");
+
+		//浏览器缓存不存在情况
+		if (oMoreB == undefined) {
+			oMoreB = 3;
+			console.log("没有检查到缓存oMoreB");
+		} else {
+			oMoreB = parseInt(oMoreB);
+			console.log("检查到缓存oMoreB=" + oMoreB);
+		};
+
+		if (oMoreB == 0) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae315f6.jpg");
+		} else if (oMoreB == 1) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae315f6.jpg");
+		} else if (oMoreB == 2) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae315f6.jpg");
+		} else if (oMoreB == 3) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae316a3.gif");
+		} else if (oMoreB == 4) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae31849.webp");
+		} else if (oMoreB == 5) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f59871b83018ae31580.gif");
+		} else if (oMoreB == 6) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e501d871b83018ae61acb.webp");
+		} else if (oMoreB == 7) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e4f5a871b83018ae317c6.gif");
+		} else if (oMoreB == 8) {
+			indexing.setAttribute("src", "https://pic.imgdb.cn/item/659e501d871b83018ae61a59.png");
+		};
+
+		//--------------------------------------------------------------
+
+		//加载错误图片替换
+		$('img').on("error", function () {
+			$(this).attr('src', 'img/index.png');  // 替换为默认图片
+		});
+
+		//--------------------------------------------------------------
+
+		//剪贴板内容跳转百度搜索
+		function getClipboardText() {
+			return new Promise((resolve, reject) => {
+				navigator.clipboard.readText().then(text => {
+					resolve(text);
+				}).catch(err => {
+					reject(err);
+				});
+			});
+		}
+
+		getClipboardText().then(text => {
+			window.open("https://www.baidu.com/s?word=" + text, "_self");
+		}).catch(err => {
+			console.error('获取剪贴板文本失败：', err);
+		});
+	</script>
 	<div style="display: none;">111</div>
 </body>
 </html>
