--- a/test/index/nav-manager.html
+++ b/test/index/nav-manager.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>导航数据管理系统</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* 样式保持不变，与之前相同 */
         :root {
             --primary-color: #6a11cb;
             --secondary-color: #2575fc;
@@ -29,7 +28,209 @@
             max-width: 1600px;
             margin: 0 auto;
         }
-        /* 其他样式保持不变... */
+        .card {
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
+            margin-bottom: 15px;
+            border: none;
+        }
+        .card-header {
+            background-color: #f1f3f5;
+            border-bottom: 1px solid var(--border-color);
+            font-weight: 600;
+            padding: 0.8rem 1.2rem;
+            font-size: 0.95rem;
+        }
+        .btn-primary {
+            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+            border: none;
+        }
+        .btn-primary:hover {
+            background: linear-gradient(135deg, #5a0db8 0%, #1c67e3 100%);
+        }
+        /* 更窄的选项卡样式 */
+        .nav-tabs {
+            border-bottom: 1px solid var(--border-color);
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            overflow-y: hidden;
+        }
+        .nav-tabs .nav-link {
+            padding: 0.5rem 0.8rem;
+            font-size: 0.85rem;
+            border: 1px solid transparent;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+            margin-bottom: -1px;
+            white-space: nowrap;
+            color: #6c757d;
+            transition: all 0.2s ease;
+        }
+        .nav-tabs .nav-link:hover {
+            border-color: #e9ecef #e9ecef #dee2e6;
+            isolation: isolate;
+        }
+        .nav-tabs .nav-link.active {
+            color: var(--primary-color);
+            font-weight: 600;
+            border-bottom: 3px solid var(--primary-color);
+            background-color: transparent;
+            border-color: #dee2e6 #dee2e6 #fff;
+        }
+        /* 新的网站卡片样式 */
+        .site-card {
+            width: 100px;
+            height: 110px;
+            border: 1px solid var(--border-color);
+            border-radius: 8px;
+            padding: 10px;
+            margin: 0 12px 12px 0;
+            background: white;
+            transition: all 0.2s ease;
+            position: relative;
+            display: inline-block;
+            text-align: center;
+            cursor: pointer;
+        }
+        .site-card:hover {
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.08);
+            transform: translateY(-2px);
+        }
+        .site-card .delete-corner {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            width: 22px;
+            height: 22px;
+            border-radius: 50%;
+            background-color: #dc3545;
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            opacity: 0;
+            transition: opacity 0.2s ease;
+            z-index: 10;
+        }
+        .site-card:hover .delete-corner {
+            opacity: 1;
+        }
+        .site-card .site-icon {
+            width: 48px;
+            height: 48px;
+            border-radius: 10px;
+            object-fit: cover;
+            margin: 0 auto 8px;
+            display: block;
+        }
+        .site-card .site-name {
+            font-size: 0.75rem;
+            font-weight: 500;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            line-height: 1.2;
+            height: 28px;
+        }
+        .sites-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: flex-start;
+        }
+        .action-buttons .btn {
+            margin-left: 4px;
+            padding: 0.25rem 0.5rem;
+            font-size: 0.75rem;
+        }
+        .form-control:focus {
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 0.2rem rgba(106, 17, 203, 0.15);
+        }
+        .footer {
+            text-align: center;
+            padding: 1.2rem 0;
+            margin-top: 1.5rem;
+            color: #6c757d;
+            font-size: 0.85rem;
+        }
+        .empty-state {
+            text-align: center;
+            padding: 1.5rem;
+            color: #6c757d;
+        }
+        .empty-state i {
+            font-size: 2.5rem;
+            margin-bottom: 0.8rem;
+            color: #ced4da;
+        }
+        .upload-area {
+            border: 2px dashed #dee2e6;
+            border-radius: 6px;
+            padding: 1.5rem;
+            text-align: center;
+            margin-bottom: 1.2rem;
+            background-color: #f8f9fa;
+            transition: all 0.2s ease;
+        }
+        .upload-area:hover {
+            border-color: var(--primary-color);
+            background-color: #e9ecef;
+        }
+        .upload-icon {
+            font-size: 2.5rem;
+            color: #6c757d;
+            margin-bottom: 0.8rem;
+        }
+        .json-preview {
+            font-family: 'Courier New', Courier, monospace;
+            background-color: #f8f9fa;
+            border-radius: 4px;
+            padding: 0.8rem;
+            max-height: 250px;
+            overflow-y: auto;
+            font-size: 0.8rem;
+        }
+        .feature-card {
+            transition: transform 0.2s ease;
+        }
+        .feature-card:hover {
+            transform: translateY(-3px);
+        }
+        .page-selector {
+            background-color: #e9ecef;
+            border-radius: 6px;
+            padding: 0.8rem;
+            margin-bottom: 1.2rem;
+        }
+        .page-btn {
+            margin: 0.2rem;
+            padding: 0.3rem 0.6rem;
+            font-size: 0.85rem;
+        }
+        /* 紧凑布局调整 */
+        .compact-view .card-body {
+            padding: 1rem;
+        }
+        .compact-view .site-card {
+            padding: 8px;
+            margin: 0 8px 8px 0;
+        }
+        .compact-view .tab-content {
+            padding-top: 0.5rem;
+        }
+        .compact-view h5 {
+            font-size: 1rem;
+            margin-bottom: 0.5rem;
+        }
+        .compact-view .alert {
+            padding: 0.75rem;
+            margin-bottom: 1rem;
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
