--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="js/bootstrap.bundle.min.js"></script>
 	</div>
 	<div class="z-2 d-flex flex-column mx-auto">
 		<div class="d-flex flex-column justify-content-end" style="height: 40%;">
