--- a/index/DD.html
+++ b/index/DD.html
@@ -8,14 +8,19 @@
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 </head>
 
-<body>
-	<div class="z-3 d-flex flex-row position-fixed">
-		<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3 w-100px"><strong>返回</strong></button>
-		<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow mt-3 w-100px"><strong>More</strong></button>
-		<button onclick="window.location.href = 'Download.html'" type="button" class="btn btn-info shadow mt-3 mx-3 w-100px"><strong>软件资源</strong></button>
-	</div>
-	<div class="z-2 d-flex flex-column mx-auto mt-5 pt-2">
-		<div class="d-flex flex-column" id="nav-content-container"></div>
+<body class="main-content">
+	<header class="sticky-header">
+		<div class="container-fluid header-nav-container px-4">
+			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow fw-bold">返回</button>
+			<button onclick="window.location.href = 'More.html'" type="button" class="btn btn-info shadow fw-bold">More</button>
+			<button onclick="window.location.href = 'Download.html'" type="button" class="btn btn-info shadow fw-bold">软件资源</button>
+		</div>
+	</header>
+
+	<div class="content-wrapper">
+		<div class="container-fluid mt-3 px-4">
+			<div id="nav-content-container"></div>
+		</div>
 
 		<div class="fixed-bottom mx-1">
 			<div class=" container-fluid">
@@ -51,45 +56,44 @@
 		navContentContainer.innerHTML = '';
 		
 		if (!navData || !navData.tabs || navData.tabs.length === 0) {
-			navContentContainer.innerHTML = '<div class="alert alert-info mx-3">暂无导航数据</div>';
+			navContentContainer.innerHTML = '<div class="alert alert-info">暂无导航数据</div>';
 			return;
 		}
 		
 		navData.tabs.forEach((tab, index) => {
 			const section = document.createElement('div');
-			section.className = 'mt-3 mx-3';
+			section.className = 'mb-4';
 			section.innerHTML = `
-				<div class="alert alert-secondary shadow" role="alert">${tab.name}</div>
-				<div id="ar${index+1}" class="d-flex flex-wrap p-2">
-					${tab.items.map(item => {
-						const iconUrl = item.icon || `https://api.afmax.cn/so/ico/index.php?r=${encodeURIComponent(item.url)}`;
-						return `
-							<a href="${item.url}" rel="nofollow" target="_blank" class="my-2 p-1 text-center nav-ban-item">
-								<img class="border rounded-circle nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
-								<h6 class="nav-ban-text">${item.name}</h6>
-							</a>
-						`;
-					}).join('')}
+				<div class="alert alert-secondary shadow mb-3" role="alert">${tab.name}</div>
+				<div id="ar${index+1}" class="more-grid">
 				</div>
 			`;
 			navContentContainer.appendChild(section);
+
+			const grid = section.querySelector(`#ar${index+1}`);
+			tab.items.forEach(item => {
+				const col = document.createElement('div');
+				col.className = 'more-card';
+				const iconUrl = item.icon || (item.url ? `https://api.iowen.cn/favicon/${new URL(item.url).hostname}.png` : '../img/index.png');
+				col.innerHTML = `
+					<a href="${item.url}" rel="nofollow" target="_blank" class="nav-ban-item">
+						<img class="nav-ban-icon" src="${iconUrl}" loading="lazy" onerror="this.src='../img/index.png'">
+						<h6 class="nav-ban-text">${item.name}</h6>
+					</a>`;
+				grid.appendChild(col);
+			});
 		});
 	}
 </script>
 
-	<!--背景--><!-- 模块化 Background 组件 -->
+	<!-- 模块化 Background 组件 -->
 	<script src="../js/components/background-component.js"></script>
-</body>
 
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', '../img/index.png');  // 替换为默认图片
 		});
-		
 	</script>
-
-	<script src="../js/foot.js"></script>
-	<script src="../js/dark-mode.js"></script>
 
 	<div class="d-none">111</div><!-- 去广告 -->
 </body>
